Added config file to gameengine-server

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,4 @@ gameengine-server/.stack-work/
 gameengine-server/*~
 gameengine-server/build/
 gameengine-server/.vscode/phoityne.log
+gameengine-server/app-root/settings.json
