--- a/gameengine-server/gameengine-server.cabal
+++ b/gameengine-server/gameengine-server.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1d0c151cb42e3c7517e2c3ece1e34d5ca99e87e49315418ddc09e5ce38d5682b
+-- hash: b1ec0ca70efe94c0c8d3464a73f7c19593ddddc2c49f677b815303d4125a1cb5
 
 name:           gameengine-server
 version:        0.1.0.0
@@ -48,6 +48,7 @@ executable gameengine-server
       Mainloop
       MainloopMessage
       Packet
+      ServerState
       Paths_gameengine_server
   hs-source-dirs:
       app
