Added task to allow the Cabal file to be generated without doing a full build (to allow Haskell LSP to recognise the file)

--- a/gameengine-server/.vscode/tasks.json
+++ b/gameengine-server/.vscode/tasks.json
@@ -29,6 +29,12 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "Output build plan and make Cabal file",
+            "type": "shell",
+            "command": "stack build --dry-run",
+            "problemMatcher": []
         }
     ]
 }
