--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -204,6 +204,9 @@
   <ItemGroup>
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\Engine.h" />
+    <ClInclude Include="src\events\Event.h" />
+    <ClInclude Include="src\events\EventHandler.h" />
+    <ClInclude Include="src\events\EventUID.h" />
     <ClInclude Include="src\generic\FunctionalVector.h" />
     <ClInclude Include="src\generic\KDTree.h" />
     <ClInclude Include="src\generic\LoadFile.h" />
@@ -287,6 +290,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine.cpp" />
+    <ClCompile Include="src\events\EventHandler.cpp" />
+    <ClCompile Include="src\events\EventUID.cpp" />
     <ClCompile Include="src\generic\FunctionalVector.cpp" />
     <ClCompile Include="src\generic\KDTree.cpp" />
     <ClCompile Include="src\generic\LoadFile.cpp" />
