--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\Engine.h" />
     <ClInclude Include="src\events\Event.h" />
+    <ClInclude Include="src\events\EventBinding.h" />
     <ClInclude Include="src\events\EventHandler.h" />
     <ClInclude Include="src\events\EventUID.h" />
     <ClInclude Include="src\generic\FunctionalVector.h" />
