--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -154,12 +154,6 @@
     <Filter Include="Source Files\network">
       <UniqueIdentifier>{f3b86262-51c8-4da2-9d5f-a71914cd7124}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\network\wx">
-      <UniqueIdentifier>{fd02d293-ac1d-4192-9b47-d6efd9f02623}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\network\wx">
-      <UniqueIdentifier>{fb7a6ca4-e949-48ce-940d-3ec64eba2d6a}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\network\serialiser">
       <UniqueIdentifier>{3d9bf0aa-e1db-4fe6-a275-33057093e274}</UniqueIdentifier>
     </Filter>
@@ -414,12 +408,6 @@
     <ClInclude Include="src\network\serialiser\Deserialise.h">
       <Filter>Header Files\network\serialiser</Filter>
     </ClInclude>
-    <ClInclude Include="src\network\wx\ConnectionEvent.h">
-      <Filter>Header Files\network\wx</Filter>
-    </ClInclude>
-    <ClInclude Include="src\network\EngineConnectionEvent.h">
-      <Filter>Header Files\network</Filter>
-    </ClInclude>
     <ClInclude Include="src\network\ConnectionTarget.h">
       <Filter>Header Files\network</Filter>
     </ClInclude>
@@ -434,6 +422,9 @@
     </ClInclude>
     <ClInclude Include="src\events\EventBinding.h">
       <Filter>Header Files\events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\network\NetworkEvent.h">
+      <Filter>Header Files\network</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -653,12 +644,6 @@
     <ClCompile Include="src\network\Packet.cpp">
       <Filter>Source Files\network</Filter>
     </ClCompile>
-    <ClCompile Include="src\network\wx\ConnectionEvent.cpp">
-      <Filter>Source Files\network\wx</Filter>
-    </ClCompile>
-    <ClCompile Include="src\network\EngineConnectionEvent.cpp">
-      <Filter>Source Files\network</Filter>
-    </ClCompile>
     <ClCompile Include="src\network\ConnectionTarget.cpp">
       <Filter>Source Files\network</Filter>
     </ClCompile>
@@ -667,6 +652,9 @@
     </ClCompile>
     <ClCompile Include="src\events\EventUID.cpp">
       <Filter>Source Files\events</Filter>
+    </ClCompile>
+    <ClCompile Include="src\network\NetworkEvent.cpp">
+      <Filter>Source Files\network</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
