Moved ConfigureCubemap into its own file pair

--- a/gameengine/gameengine.vcxproj
+++ b/gameengine/gameengine.vcxproj
@@ -241,6 +241,7 @@
     <ClInclude Include="src\generic\std_glm.h" />
     <ClInclude Include="src\generic\ThreadNamer.h" />
     <ClInclude Include="src\GLComponents.h" />
+    <ClInclude Include="src\loaders\ConfigureCubemap.h" />
     <ClInclude Include="src\loaders\GetTexture.h" />
     <ClInclude Include="src\loaders\GetVector.h" />
     <ClInclude Include="src\loaders\models\BptLoader.h" />
@@ -329,6 +330,7 @@
     <ClCompile Include="src\generic\std_glm.cpp" />
     <ClCompile Include="src\generic\ThreadNamer.cpp" />
     <ClCompile Include="src\GLComponents.cpp" />
+    <ClCompile Include="src\loaders\ConfigureCubemap.cpp" />
     <ClCompile Include="src\loaders\GetTexture.cpp" />
     <ClCompile Include="src\loaders\GetVector.cpp" />
     <ClCompile Include="src\loaders\models\BptLoader.cpp" />
