--- a/gameengine/gameengine.vcxproj.filters
+++ b/gameengine/gameengine.vcxproj.filters
@@ -438,6 +438,9 @@
     <ClInclude Include="src\loaders\GetTexture.h">
       <Filter>Header Files\loaders</Filter>
     </ClInclude>
+    <ClInclude Include="src\loaders\ConfigureCubemap.h">
+      <Filter>Header Files\loaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine.cpp">
@@ -678,6 +681,9 @@
       <Filter>Source Files\loaders\models</Filter>
     </ClCompile>
     <ClCompile Include="src\loaders\GetTexture.cpp">
+      <Filter>Source Files\loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="src\loaders\ConfigureCubemap.cpp">
       <Filter>Source Files\loaders</Filter>
     </ClCompile>
   </ItemGroup>
