Switched to IPv4-style localhost in default client settings so that it will be correctly interpreted by ASIO

--- a/demo-cube/app-root/settings.default.json
+++ b/demo-cube/app-root/settings.default.json
@@ -5,7 +5,7 @@
     "servers": [
       {
         "name": "Local machine",
-        "address": "localhost",
+        "address": "127.0.0.1",
         "port": 4321
       }
     ]
