Switched to directly running the generated server executable and setting the current working directory via the command line flag

--- a/gameengine-server/.vscode/tasks.json
+++ b/gameengine-server/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Run compiled",
             "type": "shell",
-            "command": "stack build --copy-bins; cd \"app-root\"; stack run gameengine-server",
+            "command": "stack build --copy-bins; .\\build\\gameengine-server.exe --cwd app-root",
             "problemMatcher": []
         },
         {
