Further simplified VSCode tasks

--- a/gameengine-server/.vscode/tasks.json
+++ b/gameengine-server/.vscode/tasks.json
@@ -18,7 +18,7 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "stack build --copy-bins",
+            "command": "stack build",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
