--- a/demo-cube/demo-cube.vcxproj.filters
+++ b/demo-cube/demo-cube.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="src\ServerPicker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Settings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp">
@@ -74,6 +77,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ServerPicker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Settings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
