Fixed GHCi debugging

--- a/gameengine-server/.vscode/launch.json
+++ b/gameengine-server/.vscode/launch.json
@@ -14,29 +14,10 @@
             "startupFunc": "main",
             "startupArgs": "",
             "stopOnEntry": false,
-            "mainArgs": "",
+            "mainArgs": "--cwd app-root",
             "ghciPrompt": "H>>= ",
             "ghciInitialPrompt": "Prelude>",
-            "ghciCmd": "stack ghci --test --no-load --no-build --main-is TARGET",
-            "ghciEnv": {},
-            "logFile": "${workspaceFolder}/.vscode/phoityne.log",
-            "logLevel": "WARNING",
-            "forceInspect": false
-        },
-        {
-            "type": "ghc",
-            "request": "launch",
-            "name": "Tests",
-            "internalConsoleOptions": "openOnSessionStart",
-            "workspace": "${workspaceFolder}",
-            "startup": "${workspaceFolder}/test/Spec.hs",
-            "startupFunc": "main",
-            "startupArgs": "",
-            "stopOnEntry": false,
-            "mainArgs": "",
-            "ghciPrompt": "H>>= ",
-            "ghciInitialPrompt": "Prelude>",
-            "ghciCmd": "stack ghci --test --no-load --no-build --main-is TARGET",
+            "ghciCmd": "stack ghci --test --no-load --no-build --main-is TARGET --ghci-options -fprint-evld-with-show",
             "ghciEnv": {},
             "logFile": "${workspaceFolder}/.vscode/phoityne.log",
             "logLevel": "WARNING",
