--- a/gameengine-server/package.yaml
+++ b/gameengine-server/package.yaml
@@ -23,6 +23,7 @@ dependencies:
 - directory >= 1.3 && < 1.4
 - text >= 1.2 && < 1.3
 - filepath >= 1.4 && < 1.5
+- linear >= 1.21 && < 1.22
 
 library:
   source-dirs:
